--- a/translations/kangyur/translations/072-010_toh310-the_sutra_on_impermanence.xml
+++ b/translations/kangyur/translations/072-010_toh310-the_sutra_on_impermanence.xml
@@ -20,7 +20,7 @@
         <editor role="reviser" ref="eft:person-378">Jin kyoung Choi</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.1.4 <date>2023</date>
+                <edition>v 1.1.5 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1">
@@ -54,7 +54,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2023-06-27T09:10:11.813Z" user="admin">27/06/2023 09:10:11</note>
+        <note type="lastUpdated" date-time="2023-07-11T18:27:43.993Z" user="admin">11/07/2023 18:27:43</note>
         <note type="updated" update="translation-status" value="3" date-time="2021-10-19T09:19:42.637Z" user="line-tofte">3</note>
         <note type="updated" update="text-version" value="0.0.1" date-time="2021-10-19T09:19:42.637Z" user="line-tofte">0.0.1</note>
         <note type="updated" update="text-version" value="0.0.2" date-time="2021-10-19T09:23:16.27Z" user="line-tofte">Auto (update-contributors)</note>
@@ -114,6 +114,7 @@
           <note type="updated" update="text-version" value="1.1.2" date-time="2023-04-17T07:51:42.618Z" user="sameer">Included in App v 3.0</note>
           <note type="updated" update="text-version" value="1.1.3" date-time="2023-04-19T13:10:45.303Z" user="celso">Corrected @type values for Skt. attestation to match the new code in the schema.</note>
           <note type="updated" update="text-version" value="1.1.4" date-time="2023-06-27T09:10:08.914Z" user="andre">Glossary entry with no instances removed</note>
+          <note type="updated" update="text-version" value="1.1.5" date-time="2023-07-11T18:27:41.047Z" user="celso">Fixed bad links to Chinese Tripitika</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -782,7 +783,7 @@
           <bibl xml:id="UT22084-072-010-109">
                         <title xml:lang="Zh-Ltn">Foshuo zhuxing youwei
               jing</title>
-            <title xml:lang="zh">佛說諸行有為經</title>. Taishō 758 (<ref target="https://cbetaonline.dila.edu.tw/en/T0758_001">CBETA</ref>, <ref target="https://21dzk.l.u-tokyo.ac.jp/SAT/satdb2015.php?mode=detail&amp;useid=0758_">SAT</ref>). (Translation of <title xml:lang="Sa-Ltn">Anityatāsūtra</title> by Fatian).</bibl>
+            <title xml:lang="zh">佛說諸行有為經</title>. Taishō 758 (<ref target="https://cbetaonline.dila.edu.tw/en/T0758_001">CBETA</ref>, <ref target="https://21dzk.l.u-tokyo.ac.jp/SAT2018/T0758.html">SAT</ref>). (Translation of <title xml:lang="Sa-Ltn">Anityatāsūtra</title> by Fatian).</bibl>
         </div>
         <div type="section" xml:id="UT22084-072-010-listBibl-2">
           <head type="section" tid="56">Works Referred To in the Introduction, Notes, etc.</head>
