--- a/translations/kangyur/translations/050-003_toh112-the_white_lotus_of_compassion.xml
+++ b/translations/kangyur/translations/050-003_toh112-the_white_lotus_of_compassion.xml
@@ -35,7 +35,7 @@
         <sponsor ref="sponsors.xml#sponsor-8">anonymous</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.1.2 <date>2022</date>
+                <edition>v 1.1.3 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1.a">
@@ -73,7 +73,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2023-07-11T20:28:43.493Z" user="admin">11/07/2023 20:28:43</note>
+        <note type="lastUpdated" date-time="2023-07-12T18:50:10.014Z" user="admin">12/07/2023 18:50:10</note>
         <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-10-22T06:04:52.426Z" user="andreas">v 0.1.0</note>
         <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:12:23.349Z" user="mike">2.d</note>
         <note type="updated" update="text-version" value="0.1.1" date-time="2021-04-15T09:04:52.552Z" user="line-tofte">Auto (update-contributors)</note>
@@ -107,6 +107,7 @@
           <note type="updated" update="text-version" value="1.0.0" date-time="2023-07-07T11:45:44.822Z" user="sameer">First published version.</note>
           <note type="updated" update="text-version" value="1.1.1" date-time="2023-07-11T18:37:56.695Z" user="john">Began editing the introduction; more to do.</note>
           <note type="updated" update="text-version" value="1.1.2" date-time="2023-07-11T20:28:40.542Z" user="martina-cotter">re-formated dharani verses.</note>
+          <note type="updated" update="text-version" value="1.1.3" date-time="2023-07-12T18:50:06.899Z" user="john">More edits to the introduction; more remains to do.</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -185,7 +186,20 @@
             the Buddha Ratnagarbha, who prophesies the buddhahood of all these individuals. He
             states that King Araṇemin will become the Buddha Amitābha, Samudrareṇu will become
             Śākyamuni in our fortunate eon, and 999 of Samudrareṇu’s disciples plus his five
-            attendants will become the other 1,004 buddhas of our eon.</p>
+            attendants will become the other 1,004 buddhas of our eon.<note place="end" xml:id="UT22084-050-003-2920">
+              The origin story in this sūtra for the 1,004 buddhas of our eon is one among several others. The sūtra
+              <title xml:lang="en">The Good Eon</title> (<title xml:lang="Sa-Ltn">Bhadrakalpika</title>, Toh 94) itself
+              contains two origin stories for them (see Dharmachakra Translation Committee 2022, <ptr target="#UT22084-045-001-189"/>
+                            <distinct>ff</distinct>. 
+              and <ptr target="#UT22084-045-001-4469"/>
+                            <distinct>ff</distinct>.), the 
+              <title xml:lang="Sa-Ltn">Tathāgatācintya­guhya­nirdeśa</title> 
+              (Toh 47, Degé Kangyur vol. 39, F.117.b–125.b.) another<ref rend="pending" target="https://read.84000-translate.org/translation/toh47.html"/>, and <title xml:lang="en">The Teaching of Vimalakīrti</title> 
+              (<title xml:lang="Sa-Ltn">Vimala­kīrti­nirdeśa</title>, Toh 176) yet another 
+              (see Thurman 2017, <ptr target="#UT22084-060-005-446"/>
+                            <distinct>ff</distinct>.). 
+            </note>
+                    </p>
           <tei:milestone xmlns:tei="http://www.tei-c.org/ns/1.0" unit="chunk" xml:id="UT22084-050-003-10"/>
           <p tid="14">The text explains how Śākyamuni is a buddha whose compassionate activity surpasses that
             of other buddhas because of the exceptionally powerful aspirations he made as Samudrareṇu in the
@@ -217,7 +231,8 @@
             stands in contrast with the pratyekabuddha, who on attaining realization in a world
             without the Dharma remains in solitude and does not teach. While pratyekabuddhas 
             complete the process leading to their realization independently, without necessarily having recourse to guidance from
-            others, buddhas arise never as individuals in isolation but because they have, in previous lifetimes, been inspired and taught by
+            others, buddhas arise not as individuals in isolation but as the final outcome of a long process over lifetimes of 
+            being inspired, taught, and guided by
             previous buddhas. Indeed, the idea that buddhas have arisen and will arise one after another over time 
             is the logical corollary of that notion of lineage.<note place="end" xml:id="UT22084-050-003-1109">Consequently, although 
               the notion of multiple buddhas arising over time, as well as over space, is most fully developed in the Mahāyāna 
