--- a/translations/kangyur/translations/050-003_toh112-the_white_lotus_of_compassion.xml
+++ b/translations/kangyur/translations/050-003_toh112-the_white_lotus_of_compassion.xml
@@ -35,7 +35,7 @@
         <sponsor ref="sponsors.xml#sponsor-8">anonymous</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.1.6 <date>2023</date>
+                <edition>v 1.1.7 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1.a">
@@ -73,7 +73,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2023-07-14T19:10:01.685Z" user="admin">14/07/2023 19:10:01</note>
+        <note type="lastUpdated" date-time="2023-07-15T17:50:22.844Z" user="admin">15/07/2023 17:50:22</note>
         <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-10-22T06:04:52.426Z" user="andreas">v 0.1.0</note>
         <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:12:23.349Z" user="mike">2.d</note>
         <note type="updated" update="text-version" value="0.1.1" date-time="2021-04-15T09:04:52.552Z" user="line-tofte">Auto (update-contributors)</note>
@@ -111,6 +111,7 @@
           <note type="updated" update="text-version" value="1.1.4" date-time="2023-07-13T11:32:57.752Z" user="john">Further edits to intro (unfinished).</note>
           <note type="updated" update="text-version" value="1.1.5" date-time="2023-07-13T18:45:19.678Z" user="john">Further edits, incomplete.</note>
           <note type="updated" update="text-version" value="1.1.6" date-time="2023-07-14T19:09:58.655Z" user="john">Further (still incomplete) edits to the introduction.</note>
+          <note type="updated" update="text-version" value="1.1.7" date-time="2023-07-15T17:50:19.832Z" user="john">Martina's edits (bibliography and cross-refs).</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -191,13 +192,17 @@
             Śākyamuni in our fortunate eon, and 999 of Samudrareṇu’s disciples plus his five
             attendants will become the other 1,004 buddhas of our eon.<note place="end" xml:id="UT22084-050-003-2920">
               The origin story in this sūtra for the 1,004 buddhas of our eon is one among several others. The sūtra
-              <title xml:lang="en">The Good Eon</title> (<title xml:lang="Sa-Ltn">Bhadrakalpika</title>, Toh 94) itself
+              <title xml:lang="en">
+                                <ref target="https://read.84000.co/translation/toh94.html">The Good Eon</ref>
+                            </title> (<title xml:lang="Sa-Ltn">Bhadrakalpika</title>, Toh 94) itself
               contains two origin stories for them (see Dharmachakra Translation Committee 2022, <ptr target="#UT22084-045-001-189"/>
                             <distinct>ff</distinct>. 
               and <ptr target="#UT22084-045-001-4469"/>
                             <distinct>ff</distinct>.), the 
               <title xml:lang="Sa-Ltn">Tathāgatācintya­guhya­nirdeśa</title> 
-              (Toh 47, Degé Kangyur vol. 39, F.117.b–125.b.) another<ref rend="pending" target="https://read.84000-translate.org/translation/toh47.html"/>, and <title xml:lang="en">The Teaching of Vimalakīrti</title> 
+              (Toh 47, Degé Kangyur vol. 39, F.117.b–125.b.)<ref rend="pending" target="https://read.84000-translate.org/translation/toh47.html"/> another, and <title xml:lang="en">
+                                <ref target="https://read.84000-translate.org/translation/toh176.html">The Teaching of Vimalakīrti</ref>
+                            </title> 
               (<title xml:lang="Sa-Ltn">Vimala­kīrti­nirdeśa</title>, Toh 176) yet another 
               (see Thurman 2017, <ptr target="#UT22084-060-005-446"/>
                             <distinct>ff</distinct>.).</note>
@@ -263,7 +268,9 @@
             the lifetime during which awakening as a tathāgata will occur. The
               stages of a bodhisattva’s practice are the topic of numerous scriptures, treatises, and commentaries, some in vast detail such
               as the <title xml:lang="Sa-Ltn">Buddha­vataṃsaka­sūtra</title> (Toh 44) and the <title xml:lang="Sa-Ltn">Yogācārabhūmi</title> 
-              (Toh 4035–4037). Perhaps the most succinct summary comes in the opening lines of the <title xml:lang="Sa-Ltn">Mahāvastu</title>, 
+              (Toh 4035–4037).<ref rend="pending" target="pending http://read.84000.co/translation/toh4035.html"/>
+                            <ref rend="pending" target="pending http://read.84000.co/translation/toh4036.html"/>
+                            <ref rend="pending" target="pending http://read.84000.co/translation/toh4037.html"/> Perhaps the most succinct summary comes in the opening lines of the <title xml:lang="Sa-Ltn">Mahāvastu</title>, 
               where four stages are described: (1) <foreign xml:lang="Sa-Ltn">prakṛticaryā</foreign> (“natural career”), 
               (2) <foreign xml:lang="Sa-Ltn">pranidhāna­caryā</foreign> (“resolving
               stage”), (3) <foreign xml:lang="Sa-Ltn">anulomacaryā</foreign> (“conforming stage”), and 
@@ -347,10 +354,13 @@
             From a historical point of view, it evidently came into being in a Buddhist milieu where 
             the Buddha Amitābha—or Amitāyus, as he was then primarily known—and his Sukhāvatī realm were of great importance,
             and thus later than the <title xml:lang="Sa-Ltn">Sukhāvatīvyūha</title> (<title xml:lang="en">The 
-              Display of the Pure Land of Sukhāvatī</title>, Toh 115) and 
+              Display of the Pure Land of Sukhāvatī</title>, Toh 115)<note place="end" xml:id="UT22084-050-003-28021">Sakya Pandita Translation Group, trans., <title xml:lang="en">
+                                <ref target="https://read.84000.co/translation/toh115.html">The Display of the Pure Land of Sukhāvatī</ref>
+                            </title>, Toh 115 (84000: Translating the Words of the Buddha, 2021).</note> and 
             <title xml:lang="Sa-Ltn">Saddharma­puṇḍarīka</title> (<title xml:lang="en">The White Lotus of the 
-              Good Dharma</title>, Toh 113).<note place="end" xml:id="UT22084-050-003-28015">See, respectively,
-            Sakya Pandita Translation Group 2011, and Roberts 2018.</note> 
+              Good Dharma</title>, Toh 113).<note place="end" xml:id="UT22084-050-003-28022">Roberts, Peter Alan, trans., <title xml:lang="en">
+                                <ref target="https://read.84000.co/translation/toh113.html">The White Lotus of the Good Dharma</ref>
+                            </title>, Toh 113 (84000: Translating the Words of the Buddha, 2022).</note> 
             Conversely, because certain other prominent bodhisattvas, such as Sarvanīvaraṇaviṣkambhin, Ākāśagarbha, Kṣitigarbha, and
             Vajrapāṇi, do not appear in the text, it can be surmised that it probably appeared in writing before 
             these figures had risen to their full prominence in the Mahāyāna tradition. From the perspective 
@@ -10213,31 +10223,36 @@
                         <title xml:lang="Bo-Ltn">bcom ldan ’das kyi ye shes
               rgyas pa’i mdo sde rin po che mtha’ yas pa mthar phyin pa zhes bya ba theg pa chen
               po’i mdo</title> (<title xml:lang="Sa-Ltn">Niṣṭhāgatabhagavajjñāna­vaipulya­sūtra­ratnānanta­nāma­mahāyāna-sūtra</title>). Toh
-            99, Degé Kangyur vol. 47 (mdo sde, ga), folios 1b–275b.</bibl>
+            99, Degé Kangyur vol. 47 (mdo sde, ga), folios 1b–275b. English translation in <ref target="https://read.84000.co/translation/toh99.html">Dharmachakra Translation Committee, 2019.</ref>
+                    </bibl>
           <bibl xml:id="UT22084-050-003-1766">
                         <title xml:lang="Bo-Ltn">bde ba can gyi bkod pa zhes
               bya ba theg pa chen po’i mdo</title> (<title xml:lang="Sa-Ltn">Sukhāvatīvyūha­nāma­mahāyāna­sūtra</title>). Toh 115, Degé Kangyur vol. 51 (mdo sde,
-            ja), folios 195b–200a.</bibl>
+            ja), folios 195b–200a. English translation in <ref target="http://read.84000.co/translation/toh115.html">Sakya Pandita Translation Group 2011</ref>.</bibl>
           <bibl xml:id="UT22084-050-003-1767">
                         <title xml:lang="Bo-Ltn">dam pa’i chos pad ma dkar po
               zhes bya ba theg pa chen po’i mdo</title> (<title xml:lang="Sa-Ltn">Saddharma­puṇḍarīka­nāma­mahāyāna­sūtra</title>). Toh 113, Degé Kangyur vol. 51 (mdo
-            sde, ja), folios 1b–180b.</bibl>
+            sde, ja), folios 1b–180b. English translation in <ref target="http://read.84000.co/translation/toh113.html">Roberts, Peter Alan, 2022</ref>.</bibl>
           <bibl xml:id="UT22084-050-003-1768">
                         <title xml:lang="Bo-Ltn">kun nas sgo’i le’u zhes bya
               ba theg pa chen po’i mdo</title> (<title xml:lang="Sa-Ltn">Samantamukha­parivarta­nāma­mahāyāna­sūtra</title>). Toh 53, Degé Kangyur vol. 40
-            (dkon brtsegs, kha), folios 184a–195b.</bibl>
+            (dkon brtsegs, kha), folios 184a–195b. <ref inst="English translation in... (name of translation group/translator with embedded link and year following (see above examples)" rend="pending" target="http://read.84000.co/translation/toh53.html"/>
+                    </bibl>
           <bibl xml:id="UT22084-050-003-1769">
                         <title xml:lang="Bo-Ltn">nam mkha’i mdzod kyis zhus pa
               zhes bya ba theg pa chen po’i mdo</title> (<title xml:lang="Sa-Ltn">Gaganagañja­pari­pṛcchā­nāma­mahāyāna­sūtra</title>). Toh 148, Degé Kangyur vol. 57
-            (mdo sde, pa), folios 243a–330b.</bibl>
+            (mdo sde, pa), folios 243a–330b.<ref inst="English translation in... (name of translation group/translator with embedded link and year following (see above examples)" rend="pending" target="http://read.84000.co/translation/toh148.html"/>
+                    </bibl>
           <bibl xml:id="UT22084-050-003-1770">
                         <title xml:lang="Bo-Ltn">shes rab kyi pha rol tu phyin
               pa brgyad stong pa</title> (<title xml:lang="Sa-Ltn">Aṣṭāsāhasrikā­prajñā­pāramitā</title>). Toh 12, Degé Kangyur vol. 33 (sher phyin
-            brgyad stong pa, ka), folios 1b–286b.</bibl>
+            brgyad stong pa, ka), folios 1b–286b.<ref inst="English translation in... (name of translation group/translator with embedded link and year following (see above examples)" rend="pending" target="http://read.84000.co/translation/toh12.html"/>
+                    </bibl>
           <bibl xml:id="UT22084-050-003-1771">
                         <title xml:lang="Bo-Ltn">snying rje chen po’i pad ma
               dkar po zhes bya ba theg pa chen po’i mdo</title> (<title xml:lang="Sa-Ltn">Mahākaruṇā­puṇḍarīka­nāma­mahāyāna­sūtra</title>). Toh 111, Degé Kangyur vol. 51 (mdo
-            sde, cha), folios 56a–128b.</bibl>
+            sde, cha), folios 56a–128b.<ref inst="English translation in... (name of translation group/translator with embedded link and year following (see above examples)" rend="pending" target="http://read.84000.co/translation/toh111.html"/>
+                    </bibl>
           <bibl xml:id="UT22084-050-003-1772">
                         <title xml:lang="Bo-Ltn">za ma tog bkod pa zhes bya ba
               theg pa chen po’i mdo</title> (<title xml:lang="Sa-Ltn">Karaṇḍavyūha­nāma­mahāyāna­sūtra</title>). Toh 116, Degé Kangyur vol. 51 (mdo sde,
@@ -10248,12 +10263,13 @@
           <bibl xml:id="UT22084-050-003-1773">Davids, T.W. Rhys &amp; William Stede. <title xml:lang="en">The Pali Text’s Society’s Pali–English Dictionary</title>. London: Pali
             Text Society, 1921–25.</bibl>
           <bibl xml:id="UT22084-050-003-28013">Dharmachakra Translation Committee, trans. <title xml:lang="en">
-                            <ref target="https://read.84000.co/translation/toh99.html"/>
+                            <ref target="https://read.84000.co/translation/toh99.html">The Precious Discourse on the Blessed One’s Extensive Wisdom That Leads to Infinite Certainty</ref>
                         </title> (Toh 99). 84000:
             Translating the Words of the Buddha, 2019.</bibl>
           <bibl xml:id="UT22084-050-003-1774">Dīpaṃkarajñāna. <title xml:lang="Bo-Ltn">dbu ma’i man
               ngag rin po che’i za ma tog kha phye ba</title> (<title xml:lang="Sa-Ltn">Ratna­karaṇḍodghāṭa­nāma­madhyamakopadeśa</title>). Toh 3930, Degé Tengyur vol. 212
-            (dbu ma, ki), folios 96b1–116b7.</bibl>
+            (dbu ma, ki), folios 96b1–116b7.<ref inst="English translation in... (name of translation group/translator with embedded link and year following (see above examples)" rend="pending" target="http://read.84000.co/translation/toh3930.html"/>
+                    </bibl>
           <bibl xml:id="UT22084-050-003-1775">Edgerton, Franklin. <title xml:lang="en">Buddhist
               Hybrid Sanskrit Grammar and Dictionary</title> (2 vols). New Haven: Yale University
             Press, 1953. </bibl>
@@ -10264,9 +10280,20 @@
               lHan kar ma: ein früher Katalog der ins Tibetische übersetzten buddhistischen
               Texte</title>. Wien: Verlag der österreichischen Akademie der Wissenschaften,
             2008.</bibl>
+          <bibl xml:id="UT22084-045-001-14636">Jaini, Padmanabh S. “Stages in the Bodhisattva Career of the Tathāgata Maitreya,” in Sponberg and Hardacre (eds.), <title xml:lang="en">Maitreya, the Future Buddha</title>, pp 54-90. Cambridge: Cambridge University Press, 1988. Reprinted with additional material in Jaini, Padmanabh S. <title xml:lang="en">Collected Papers on Buddhist Studies</title>, ch. 26. Delhi: Motilal Banarsidass, 2001.</bibl>
           <bibl xml:id="UT22084-050-003-1778">Mañjuśrīkīrti. <title xml:lang="Bo-Ltn">’jam dpal gyi
               mtshan yang dag par brjod pa’i rgya cher bshad pa</title> (<title xml:lang="Sa-Ltn">Mañjuśrī­nāma­saṃgītiṭīkā</title>). Toh 2534, Degé Tengyur vol. 63 (rgyud, khu),
-            folios 115b–301a7. </bibl>
+            folios 115b–301a7.<ref inst="English translation in... (name of translation group/translator with embedded link and year following (see above examples)" rend="pending" target="http://read.84000.co/translation/toh2534.html"/>
+                    </bibl>
+          <bibl xml:id="UT22084-050-003-28023">Roberts, Peter Alan, trans. <title xml:lang="en">
+                            <ref target="https://read.84000.co/translation/toh113.html">The White Lotus of the Good Dharma</ref>
+                        </title> (Toh 113). 84000: Translating the Words of the Buddha, 2022.</bibl>
+          <bibl xml:id="UT22084-050-003-28025">Roberts, Peter Alan and Tulku Yeshi, trans.<title xml:lang="en">
+                            <ref target="https://read.84000.co/translation/toh116.html"> The Basket’s Display</ref>
+                        </title> (Toh 116). 84000: Translating the Words of the Buddha, 2013.</bibl>
+          <bibl xml:id="UT22084-050-003-28024">Sakya Pandita Translation Group, trans. <title xml:lang="en">
+                            <ref target="https://read.84000.co/translation/toh115.html">The Display of the Pure Land of Sukhāvatī</ref>
+                        </title> (Toh 115). 84000: Translating the Words of the Buddha, 2011.</bibl>
           <bibl xml:id="UT22084-050-003-2779">Salomon, Richard. <title xml:lang="en">The Buddhist
               Literature of Ancient Gandhāra: An Introduction with Selected Translations</title>.
             Classics of Indian Buddhism series. Somerville: Wisdom Publications, 2018.</bibl>
