--- a/translations/kangyur/placeholders/043-012_toh75-the_sutra_of_gangottaras_questions.xml
+++ b/translations/kangyur/placeholders/043-012_toh75-the_sutra_of_gangottaras_questions.xml
@@ -11,13 +11,14 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa gang gA'i mchog gis zhus pa zhes bya ba theg pa chen po'i mdo</title>
                 <author role="translatorMain" ref="eft:team-55"/>
                 <author role="translatorEng" ref="eft:person-434">Sophie McGrath</author>
+                <editor role="projectEditor" ref="eft:person-411">David Fiordalis</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2019</date>
+                <edition>v 0.0.9 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.g">
+            <publicationStmt status="2.f">
                 <idno xml:id="UT22084-043-012"/>
                 <date/>
             </publicationStmt>
@@ -33,7 +34,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-06-13T14:12:44.986Z" user="admin">13/06/2023 14:12:44</note>
+                <note type="lastUpdated" date-time="2023-07-17T08:22:56.194Z" user="admin">17/07/2023 08:22:56</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="" date-time="2023-03-22T14:05:04.88Z" user="line-tofte"/>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2023-03-22T14:05:04.88Z" user="line-tofte">Auto (update-publication-status)</note>
@@ -45,6 +46,9 @@
                 <note type="updated" update="text-version" value="0.0.6" date-time="2023-05-30T15:07:12.57Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="translation-status" value="2.g" date-time="2023-06-13T14:12:40.643Z" user="line-tofte">2.g</note>
                 <note type="updated" update="text-version" value="0.0.7" date-time="2023-06-13T14:12:40.643Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.8" date-time="2023-06-13T14:13:15.914Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2023-07-17T08:22:51.941Z" user="line-tofte">2.f</note>
+                <note type="updated" update="text-version" value="0.0.9" date-time="2023-07-17T08:22:51.941Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
