--- a/translations/kangyur/placeholders/056-004_toh136-the_sutra_on_the_samadhi_of_the_four_youths.xml
+++ b/translations/kangyur/placeholders/056-004_toh136-the_sutra_on_the_samadhi_of_the_four_youths.xml
@@ -8,19 +8,22 @@
                 <title type="mainTitle" xml:lang="Sa-Ltn">caturdārakasamādhisūtra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">khye'u bzhi'i ting nge 'dzin gyi mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryacaturdārakasamādhi­nāmamahāyānasūtra</title>
-                <title type="otherTitle" xml:lang="zh">《四童子三昧經》</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa khye'u bzhi'i ting nge 'dzin ces bya ba theg pa chen po'i mdo</title>
-                <author role="translatorMain" ref="contributors.xml#team-9"/>
-                <author role="translatorEng" ref="contributors.xml#person-74">Ryan Damron</author>
-                <consultant role="projectManager" ref="contributors.xml#person-50">Dr. Andreas Doctor</consultant>
+                <title type="otherTitle" xml:lang="zh">《四童子三昧經》</title>
+                <author role="translatorMain" ref="eft:team-9"/>
+                <author role="translatorEng" ref="eft:person-74">Ryan Damron</author>
+                <consultant role="projectManager" ref="eft:person-50">Andreas Doctor</consultant>
+                <editor role="associateEditor" ref="eft:person-422">George FitzHerbert</editor>
+                <editor role="reviser" ref="eft:person-312">Nicholas Schmidt</editor>
+                <editor role="reviser" ref="eft:person-59">Benjamin Collet-Cassart</editor>
                 <sponsor ref="sponsors.xml#sponsor-203">Li Yu Hua, Zhu Yuan Guo, Rachel Zhou, Grace Zhu</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2020</date>
+                <edition>v 0.0.7 <date>2020</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.g">
+            <publicationStmt status="2.f">
                 <idno xml:id="UT22084-056-004"/>
                 <date/>
             </publicationStmt>
@@ -36,7 +39,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-05-25T09:24:09.568Z" user="admin">25/05/2023 09:24:09</note>
+                <note type="lastUpdated" date-time="2023-07-17T08:52:48.392Z" user="admin">17/07/2023 08:52:48</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-01-16T19:43:20.628Z" user="andreas">0.0.1</note>
                 <note type="updated" update="translation-status" value="2.g" date-time="2020-01-16T19:43:20.628Z" user="andreas">2.g</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-01-27T13:00:38.22Z" user="mike">2.h</note>
@@ -44,6 +47,10 @@
                 <note type="updated" update="text-version" value="0.0.3" date-time="2022-07-26T05:55:43.25Z" user="cabie-sim">Auto (update-titles)</note>
                 <note type="updated" update="translation-status" value="2.g" date-time="2023-05-25T09:24:05.3Z" user="line-tofte">2.g</note>
                 <note type="updated" update="text-version" value="0.0.4" date-time="2023-05-25T09:24:05.3Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2023-05-25T09:24:59.624Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2023-05-25T09:26:32.131Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2023-07-17T08:52:44.141Z" user="line-tofte">2.f</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2023-07-17T08:52:44.141Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
