--- a/translations/kangyur/placeholders/085-005_toh485-a_portion_of_the_practice_of_the_sovereign_tantra_purifying_evil_destinies.xml
+++ b/translations/kangyur/placeholders/085-005_toh485-a_portion_of_the_practice_of_the_sovereign_tantra_purifying_evil_destinies.xml
@@ -15,10 +15,10 @@
                 <author role="translatorEng" ref="eft:person-421">Kris Anderson</author>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.6 <date>2021</date>
+                <edition>v 0.0.7 <date>2021</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt status="2.h">
                 <idno xml:id="UT22084-085-005"/>
                 <date/>
             </publicationStmt>
@@ -34,7 +34,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-08-17T08:18:53.546Z" user="admin">17/08/2022 08:18:53</note>
+                <note type="lastUpdated" date-time="2023-07-17T09:46:29.41Z" user="admin">17/07/2023 09:46:29</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-05-17T16:19:06.257Z" user="john">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-06-01T12:00:28.38Z" user="john">Auto (update-titles)</note>
                 <note type="updated" update="text-version" value="0.0.3" date-time="2021-06-01T12:03:11.822Z" user="john">0.0.3</note>
@@ -43,6 +43,8 @@
                 <note type="updated" update="translation-status" value="3" date-time="2022-08-17T08:10:43.217Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.5" date-time="2022-08-17T08:10:43.217Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.6" date-time="2022-08-17T08:18:45.577Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2023-07-17T09:46:25.152Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2023-07-17T09:46:25.152Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
