--- a/translations/kangyur/placeholders/072-030_toh330-the_smaller_sutra_of_the_god.xml
+++ b/translations/kangyur/placeholders/072-030_toh330-the_smaller_sutra_of_the_god.xml
@@ -15,10 +15,10 @@
                 <editor role="copyEditor" ref="eft:person-433">Dawn Collins</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.11 <date>2021</date>
+                <edition>v 0.0.12 <date>2021</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.d">
+            <publicationStmt status="2.c">
                 <idno xml:id="UT22084-072-030"/>
                 <date/>
             </publicationStmt>
@@ -34,7 +34,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-06-01T12:58:57.433Z" user="admin">01/06/2023 12:58:57</note>
+                <note type="lastUpdated" date-time="2023-07-17T11:08:00.686Z" user="admin">17/07/2023 11:08:00</note>
                 <note type="updated" update="translation-status" value="3" date-time="2021-03-10T08:26:53.902Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-03-10T08:26:53.902Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-03-10T08:27:11.559Z" user="line-tofte">Auto (update-contributors)</note>
@@ -52,6 +52,8 @@
                 <note type="updated" update="text-version" value="0.0.10" date-time="2023-05-02T14:30:31.61Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2023-06-01T12:58:53.128Z" user="line-tofte">2.d</note>
                 <note type="updated" update="text-version" value="0.0.11" date-time="2023-06-01T12:58:53.128Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.c" date-time="2023-07-17T11:07:56.345Z" user="line-tofte">2.c</note>
+                <note type="updated" update="text-version" value="0.0.12" date-time="2023-07-17T11:07:56.345Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
