--- a/translations/kangyur/placeholders/043-002_toh65-the_prophecy_for_the_magician_bhadra.xml
+++ b/translations/kangyur/placeholders/043-002_toh65-the_prophecy_for_the_magician_bhadra.xml
@@ -10,21 +10,22 @@
                 <title type="mainTitle" xml:lang="zh">《幻師仁賢授記經》(大正藏:《大寶積經授幻師跋陀羅記會第二十一》</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryabhadra­māyākaravyākaraṇa­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa sgyu ma mkhan bzang po lung bstan pa zhes bya ba theg pa chen po'i mdo</title>
-                <author role="translatorMain" ref="contributors.xml#team-39"/>
-                <author role="translatorEng" ref="contributors.xml#person-95">Celso Wilkinson</author>
-                <author role="translatorEng" ref="contributors.xml#person-92">Laura Goetz</author>
-                <author role="translatorEng" ref="contributors.xml#person-318">Damchoe Wangmo, Lopon</author>
-                <consultant role="advisor" ref="contributors.xml#person-97">William Giddings</consultant>
-                <consultant role="advisor" ref="contributors.xml#person-96">L.S. Summer</consultant>
-                <consultant role="projectManager" ref="contributors.xml#person-95">Celso Wilkinson</consultant>
-                <editor role="projectEditor" ref="contributors.xml#person-289">Nathaniel Rich</editor>
+                <author role="translatorMain" ref="eft:team-39"/>
+                <author role="translatorEng" ref="eft:person-95">Celso Wilkinson</author>
+                <author role="translatorEng" ref="eft:person-92">Laura Goetz</author>
+                <author role="translatorEng" ref="eft:person-318">Damchoe Wangmo, Lopon</author>
+                <consultant role="advisor" ref="eft:person-97">William Giddings</consultant>
+                <consultant role="advisor" ref="eft:person-96">L.S. Summer</consultant>
+                <consultant role="projectManager" ref="eft:person-95">Celso Wilkinson</consultant>
+                <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
+                <editor role="associateEditor" ref="eft:person-422">George FitzHerbert</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.3 <date>2019</date>
+                <edition>v 0.1.5 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.g">
+            <publicationStmt status="2.f">
                 <idno xml:id="UT22084-043-002"/>
                 <date/>
             </publicationStmt>
@@ -40,7 +41,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-04-20T09:50:20.008Z" user="admin">20/04/2023 09:50:20</note>
+                <note type="lastUpdated" date-time="2023-07-17T11:25:38.791Z" user="admin">17/07/2023 11:25:38</note>
                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:42:32.43Z" user="john">v 0.1.0</note>
                 <note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:42:32.43Z" user="john">3</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2021-08-06T12:46:12.185Z" user="line-tofte">2.h</note>
@@ -48,6 +49,9 @@
                 <note type="updated" update="text-version" value="0.1.2" date-time="2023-02-10T13:05:26.536Z" user="amy">Auto (update-titles)</note>
                 <note type="updated" update="translation-status" value="2.g" date-time="2023-04-20T09:50:15.751Z" user="line-tofte">2.g</note>
                 <note type="updated" update="text-version" value="0.1.3" date-time="2023-04-20T09:50:15.751Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.1.4" date-time="2023-04-20T09:50:51.916Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2023-07-17T11:25:34.524Z" user="line-tofte">2.f</note>
+                <note type="updated" update="text-version" value="0.1.5" date-time="2023-07-17T11:25:34.524Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
