--- a/translations/kangyur/placeholders/068-003_toh269-the_sutra_dispelling_the_darkness_of_the_ten_directions.xml
+++ b/translations/kangyur/placeholders/068-003_toh269-the_sutra_dispelling_the_darkness_of_the_ten_directions.xml
@@ -7,8 +7,8 @@
                 <title type="mainTitle" xml:lang="en">The Sūtra Dispelling the Darkness of the Ten Directions</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">daśadigandhakāravidhvaṃsanasūtra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">phyogs bcu'i mun sel gyi mdo/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">'phags pa phyogs bcu'i mun pa rnam par sel ba zhes bya ba theg pa chen po'i mdo</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryadaśadigandha­kāravidhvaṃsana­nāmamahāyānasūtra</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">'phags pa phyogs bcu'i mun pa rnam par sel ba zhes bya ba theg pa chen po'i mdo</title>
                 <author role="translatorMain" ref="eft:team-27"/>
                 <editor role="externalReviewer" ref="eft:person-281">Paul Harrison</editor>
                 <editor role="projectEditor" ref="eft:person-92">Laura Goetz</editor>
@@ -16,13 +16,14 @@
                 <author role="translatorEng" ref="eft:person-173">Ven. Khenpo Kalsang Gyaltsen</author>
                 <consultant role="projectManager" ref="eft:person-175">Rev. Dr. Ani Kunga Chodron</consultant>
                 <author role="translatorEng" ref="eft:person-175">Rev. Dr. Ani Kunga Chodron</author>
+                <editor role="projectEditor" ref="eft:person-74">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2019</date>
+                <edition>v 0.0.7 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.g">
+            <publicationStmt status="2.f">
                 <idno xml:id="UT22084-068-003"/>
                 <date/>
             </publicationStmt>
@@ -38,7 +39,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-16T09:52:36.84Z" user="admin">16/01/2023 09:52:36</note>
+                <note type="lastUpdated" date-time="2023-07-17T11:39:58.292Z" user="admin">17/07/2023 11:39:58</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2021-10-19T08:20:42.832Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-10-19T08:20:42.832Z" user="line-tofte">Auto (update-publication-status)</note>
@@ -46,6 +47,9 @@
                 <note type="updated" update="text-version" value="0.0.3" date-time="2022-09-16T13:50:06.702Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.4" date-time="2022-09-16T13:50:42.931Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.0.5" date-time="2023-01-16T09:52:31.274Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2023-06-29T09:01:03.756Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2023-07-17T11:39:54.033Z" user="line-tofte">2.f</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2023-07-17T11:39:54.033Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
