--- a/translations/kangyur/placeholders/091-062_toh665,1084-the_essence_of_ganapati.xml
+++ b/translations/kangyur/placeholders/091-062_toh665,1084-the_essence_of_ganapati.xml
@@ -15,13 +15,14 @@
                 <consultant role="dharmaMaster" ref="eft:person-40">Chokyi Nyima Rinpoche</consultant>
                 <editor role="reviser" ref="eft:person-50">Andreas Doctor</editor>
                 <editor role="projectEditor" ref="eft:person-422">George FitzHerbert</editor>
+                <editor role="copyEditor" ref="eft:person-433">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.7 <date>2019</date>
+                <edition>v 0.1.9 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.e">
+            <publicationStmt status="2.d">
                 <idno xml:id="UT22084-091-062"/>
                 <date/>
             </publicationStmt>
@@ -46,7 +47,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-06-19T11:01:13.693Z" user="admin">19/06/2023 11:01:13</note>
+                <note type="lastUpdated" date-time="2023-07-18T11:44:54.874Z" user="admin">18/07/2023 11:44:54</note>
                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:05:20.372Z" user="john">v 0.1.0</note>
                 <note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:05:20.372Z" user="john">3</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2021-05-10T08:21:21.912Z" user="line-tofte">2.h</note>
@@ -60,6 +61,9 @@
                 <note type="updated" update="text-version" value="0.1.6" date-time="2023-04-24T12:46:36.204Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="translation-status" value="2.e" date-time="2023-06-19T11:01:09.403Z" user="line-tofte">2.e</note>
                 <note type="updated" update="text-version" value="0.1.7" date-time="2023-06-19T11:01:09.403Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.1.8" date-time="2023-06-19T11:01:43.75Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.d" date-time="2023-07-18T11:44:50.598Z" user="line-tofte">2.d</note>
+                <note type="updated" update="text-version" value="0.1.9" date-time="2023-07-18T11:44:50.598Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
