--- a/translations/kangyur/placeholders/091-063_toh666-the_tantra_of_ganapati.xml
+++ b/translations/kangyur/placeholders/091-063_toh666-the_tantra_of_ganapati.xml
@@ -4,22 +4,24 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">tshogs bdag kyi rgyud/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">mahāgaṇapatitantra</title>
                 <title type="mainTitle" xml:lang="en">The Tantra of Gaṇapati</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">tshogs kyi bdag po chen po'i rgyud/</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">mahāgaṇapatitantra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">tshogs bdag kyi rgyud/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">mahāgaṇapatitantranāma</title>
-    <author role="translatorMain" ref="contributors.xml#team-9"/>
-            
-    <consultant role="projectManager" ref="contributors.xml#person-50">Dr. Andreas Doctor</consultant>
-    <author role="translatorEng" ref="contributors.xml#person-274">Adam Krug</author>
+                <title type="otherTitle" xml:lang="Bo-Ltn">tshogs kyi bdag po chen po'i rgyud/</title>
+                <author role="translatorMain" ref="eft:team-9"/>
+                <consultant role="projectManager" ref="eft:person-50">Andreas Doctor</consultant>
+                <author role="translatorEng" ref="eft:person-274">Adam Krug</author>
+                <editor role="reviser" ref="eft:person-319">Ryan Conlon</editor>
+                <editor role="associateEditor" ref="eft:person-422">George FitzHerbert</editor>
+                <editor role="copyEditor" ref="eft:person-433">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.3 <date>2019</date>
+                <edition>v 0.1.6 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.e">
+            <publicationStmt status="2.d">
                 <idno xml:id="UT22084-091-063"/>
                 <date/>
             </publicationStmt>
@@ -35,9 +37,19 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-06-19T11:02:14.515Z" user="admin">19/06/2023 11:02:14</note>
-<note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:06:14.363Z" user="john">v 0.1.0</note>
-<note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:06:14.363Z" user="john">3</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-08-08T14:16:19.71Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.1.1" date-time="2022-08-08T14:16:19.71Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.f" date-time="2023-04-24T12:57:40.229Z" user="line-tofte">2.f</note>    <note type="updated" update="text-version" value="0.1.2" date-time="2023-04-24T12:57:40.229Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.e" date-time="2023-06-19T11:02:10.243Z" user="line-tofte">2.e</note>    <note type="updated" update="text-version" value="0.1.3" date-time="2023-06-19T11:02:10.243Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2023-07-18T11:45:53.591Z" user="admin">18/07/2023 11:45:53</note>
+                <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:06:14.363Z" user="john">v 0.1.0</note>
+                <note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:06:14.363Z" user="john">3</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2022-08-08T14:16:19.71Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.1.1" date-time="2022-08-08T14:16:19.71Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2023-04-24T12:57:40.229Z" user="line-tofte">2.f</note>
+                <note type="updated" update="text-version" value="0.1.2" date-time="2023-04-24T12:57:40.229Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.e" date-time="2023-06-19T11:02:10.243Z" user="line-tofte">2.e</note>
+                <note type="updated" update="text-version" value="0.1.3" date-time="2023-06-19T11:02:10.243Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.1.4" date-time="2023-06-19T11:03:23.307Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.1.5" date-time="2023-06-19T11:03:46.147Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.d" date-time="2023-07-18T11:45:49.3Z" user="line-tofte">2.d</note>
+                <note type="updated" update="text-version" value="0.1.6" date-time="2023-07-18T11:45:49.3Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
