--- a/translations/kangyur/placeholders/091-065_toh668,1085-the_incantation_of_mahakala.xml
+++ b/translations/kangyur/placeholders/091-065_toh668,1085-the_incantation_of_mahakala.xml
@@ -15,13 +15,14 @@
                 <consultant role="dharmaMaster" ref="eft:person-40">Chokyi Nyima Rinpoche</consultant>
                 <editor role="reviser" ref="eft:person-50">Andreas Doctor</editor>
                 <editor role="projectEditor" ref="eft:person-411">David Fiordalis</editor>
+                <editor role="copyEditor" ref="eft:person-433">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.7 <date>2019</date>
+                <edition>v 0.1.9 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.e">
+            <publicationStmt status="2.d">
                 <idno xml:id="UT22084-091-065"/>
                 <date/>
             </publicationStmt>
@@ -46,7 +47,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-06-19T11:07:57.787Z" user="admin">19/06/2023 11:07:57</note>
+                <note type="lastUpdated" date-time="2023-07-18T11:47:40.127Z" user="admin">18/07/2023 11:47:40</note>
                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:07:48.589Z" user="john">v 0.1.0</note>
                 <note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:07:48.589Z" user="john">3</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2021-05-10T08:46:40.877Z" user="line-tofte">2.h</note>
@@ -60,6 +61,9 @@
                 <note type="updated" update="text-version" value="0.1.6" date-time="2023-04-17T09:38:27.596Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="translation-status" value="2.e" date-time="2023-06-19T11:07:53.529Z" user="line-tofte">2.e</note>
                 <note type="updated" update="text-version" value="0.1.7" date-time="2023-06-19T11:07:53.529Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.1.8" date-time="2023-06-19T11:08:27.642Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.d" date-time="2023-07-18T11:47:35.827Z" user="line-tofte">2.d</note>
+                <note type="updated" update="text-version" value="0.1.9" date-time="2023-07-18T11:47:35.827Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
