--- a/translations/kangyur/placeholders/091-066_toh669,1086-the_incantation_of_mahakala_deliverance_from_all_epidemic_fevers.xml
+++ b/translations/kangyur/placeholders/091-066_toh669,1086-the_incantation_of_mahakala_deliverance_from_all_epidemic_fevers.xml
@@ -7,21 +7,22 @@
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī of Mahākāla, Deliverance from All Epidemic Fevers</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">nag po chen po'i gzungs rims nad las thar byed/</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa nag po chen po'i gzungs rims nad thams cad las thar bar byed pa/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa nag po chen po'i gzungs/ rims nad thams cad las thar bar byed pa/</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa nag po chen po'i gzungs rims nad thams cad las thar bar byed pa/</title>
                 <author role="translatorMain" ref="eft:team-9"/>
                 <consultant role="projectManager" ref="eft:person-50">Andreas Doctor</consultant>
                 <consultant role="dharmaMaster" ref="eft:person-40">Chokyi Nyima Rinpoche</consultant>
                 <author role="translatorEng" ref="eft:person-274">Adam Krug</author>
                 <editor role="reviser" ref="eft:person-50">Andreas Doctor</editor>
                 <editor role="projectEditor" ref="eft:person-411">David Fiordalis</editor>
+                <editor role="copyEditor" ref="eft:person-433">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.7 <date>2019</date>
+                <edition>v 0.1.9 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.e">
+            <publicationStmt status="2.d">
                 <idno xml:id="UT22084-091-066"/>
                 <date/>
             </publicationStmt>
@@ -46,7 +47,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-06-19T11:09:05.663Z" user="admin">19/06/2023 11:09:05</note>
+                <note type="lastUpdated" date-time="2023-07-18T11:48:37.734Z" user="admin">18/07/2023 11:48:37</note>
                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-12T18:59:08.453Z" user="john">v 0.1.0</note>
                 <note type="updated" update="translation-status" value="3" date-time="2019-12-12T18:59:08.453Z" user="john">3</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2021-05-10T09:50:38.66Z" user="line-tofte">2.h</note>
@@ -60,6 +61,9 @@
                 <note type="updated" update="text-version" value="0.1.6" date-time="2023-04-17T09:39:24.46Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="translation-status" value="2.e" date-time="2023-06-19T11:09:01.406Z" user="line-tofte">2.e</note>
                 <note type="updated" update="text-version" value="0.1.7" date-time="2023-06-19T11:09:01.406Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.1.8" date-time="2023-06-19T11:09:33.481Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.d" date-time="2023-07-18T11:48:33.45Z" user="line-tofte">2.d</note>
+                <note type="updated" update="text-version" value="0.1.9" date-time="2023-07-18T11:48:33.45Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
