--- a/translations/kangyur/translations/050-003_toh112-the_white_lotus_of_compassion.xml
+++ b/translations/kangyur/translations/050-003_toh112-the_white_lotus_of_compassion.xml
@@ -35,7 +35,7 @@
         <sponsor ref="sponsors.xml#sponsor-8">anonymous</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.2.1 <date>2023</date>
+                <edition>v 1.2.2 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1.a">
@@ -73,7 +73,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2023-07-18T18:30:42.313Z" user="admin">18/07/2023 18:30:42</note>
+        <note type="lastUpdated" date-time="2023-07-18T19:58:52.524Z" user="admin">18/07/2023 19:58:52</note>
         <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-10-22T06:04:52.426Z" user="andreas">v 0.1.0</note>
         <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:12:23.349Z" user="mike">2.d</note>
         <note type="updated" update="text-version" value="0.1.1" date-time="2021-04-15T09:04:52.552Z" user="line-tofte">Auto (update-contributors)</note>
@@ -114,6 +114,7 @@
           <note type="updated" update="text-version" value="1.1.7" date-time="2023-07-15T17:50:19.832Z" user="john">Martina's edits (bibliography and cross-refs).</note>
           <note type="updated" update="text-version" value="1.1.8" date-time="2023-07-17T18:27:08.954Z" user="john">Further edits, unfinished.</note>
           <note type="updated" update="text-version" value="1.2.1" date-time="2023-07-18T18:30:39.33Z" user="john">Edits to introduction, text, and bibliography completed for now prior to announcement.</note>
+          <note type="updated" update="text-version" value="1.2.2" date-time="2023-07-18T19:58:49.563Z" user="john">1.2.2</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
