--- a/translations/kangyur/placeholders/100-047_toh891-the_incantation_of_sarvanivaranaviskambhin.xml
+++ b/translations/kangyur/placeholders/100-047_toh891-the_incantation_of_sarvanivaranaviskambhin.xml
@@ -13,12 +13,13 @@
                 <author role="translatorEng" ref="eft:person-61">Catherine Dalton</author>
                 <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
                 <editor role="copyEditor" ref="eft:person-433">Dawn Collins</editor>
+                <editor role="projectEditor" ref="eft:person-422">George FitzHerbert</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.10 <date>2022</date>
+                <edition>v 0.0.12 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.c">
+            <publicationStmt status="2.a">
                 <idno xml:id="UT22084-100-047"/>
                 <date/>
             </publicationStmt>
@@ -34,7 +35,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-06-22T14:04:19.4Z" user="admin">22/06/2023 14:04:19</note>
+                <note type="lastUpdated" date-time="2023-07-19T12:39:59.099Z" user="admin">19/07/2023 12:39:59</note>
                 <note type="updated" update="translation-status" value="3" date-time="2022-04-13T12:55:53.951Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2022-04-13T12:55:53.951Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-04-13T12:56:18.881Z" user="line-tofte">Auto (update-contributors)</note>
@@ -51,6 +52,9 @@
                 <note type="updated" update="text-version" value="0.0.9" date-time="2023-06-19T13:13:09.403Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.c" date-time="2023-06-22T14:04:15.11Z" user="line-tofte">2.c</note>
                 <note type="updated" update="text-version" value="0.0.10" date-time="2023-06-22T14:04:15.11Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.11" date-time="2023-06-29T13:51:46.801Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.a" date-time="2023-07-19T12:39:54.857Z" user="line-tofte">2.a</note>
+                <note type="updated" update="text-version" value="0.0.12" date-time="2023-07-19T12:39:54.857Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
